--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "seed": "node ./task/seed.js",
-    "start": "npm run seed && node app.js"
+    "start": "node app.js"
   },
   "author": "Khalid Isahak: 20017262",
   "author2": "Sera Kim: 20016580",
