--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "mongodb": "^6.5.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "xss": "^1.0.15"
   }
 }
